# codespace-clang-c

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
